syntax = "proto3";
package pb;

// protoc ./user.proto --go_out=plugins=grpc:./pb
message User {
    string id = 1;
    string name = 2;
    string phone = 3;
    string email = 4;
    string password = 5;
    bool isDeleted = 6;
}

message CreateUserRequest{
    string name = 1;
    string phone = 2;
    string email = 3;
    string password = 4;
}

message CreateUserResponse {
    User user = 1;
}

message UpdateUserRequest{
    string id = 1;
    string name = 2;
    string phone = 3;
    string email = 4;
}

message UpdateUserResponse {
    User user = 1;
}

message GetUsersRequest {
    uint64 skip = 1;
    uint64 take = 2;
}

message GetUsersResponse {
    repeated User user = 1;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    bool done = 1;
}

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){}
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse){}
    rpc GetUsers (GetUsersRequest) returns (GetUsersResponse){}
    rpc GetUser (GetUserRequest) returns (GetUserResponse){}
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse){}
}